2009-04-08  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdlib.c:
	manage correctly getenv() when value is NULL.

2009-02-22  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	Use high resolution timer for gettimeofday() and
	export a convenient function for ecore_time_get(),
	to save some computations.

	* src/lib/evil_pwd.c:
	Use the correct name for GetUserNameEx() according
	to the platform.

2009-02-16  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	replace / by \ in the path passed to fopen

2009-02-01  Vincent Torri  <doursse at users dot sf dot net>

	* doc/Makefile.am:
	* m4/efl_doxygen.m4:
	Missing modification of the variable DOXYGEN to
	efl_doxygen. Spotted by Albin Tonnerre (Lutin).

2009-02-01  Vincent Torri  <doursse at users dot sf dot net>

	* m4/efl_doxygen.m4:
	fix logic in efl_doxygen.m4

2009-01-24  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	fix fcntl()

2009-01-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_dlfcn.c:
	* src/bin/evil_test_dlfcn.h:
	* src/bin/evil_test_environment.c:
	* src/bin/evil_test_environment.h:
	* src/bin/evil_test_gettimeofday.c:
	* src/bin/evil_test_gettimeofday.h:
	* src/bin/evil_test_link.c:
	* src/bin/evil_test_link.h:
	* src/bin/evil_test_mkstemp.c:
	* src/bin/evil_test_mkstemp.h:
	* src/bin/evil_test_realpath.c:
	* src/bin/evil_test_realpath.h:
	various fixes in the test suite.
	add mkstemp() and realpath tests.

	* src/lib/evil_dirent.c:
	fix opendir() when indexation search is not active.
	formatting.

	* src/lib/evil_stdlib.c:
	fir mkstemp() on both platform

	* src/lib/evil_unistd.c:
	remove useless error message.

2009-01-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_dirent.c:
	* src/lib/evil_fnmatch.c:
	* src/lib/evil_link_xp.cpp: